[gd_scene load_steps=13 format=3 uid="uid://bd2h5hfjso30y"]

[ext_resource type="Script" uid="uid://dfxr7f6mk2b7c" path="res://game.gd" id="1_80nbo"]
[ext_resource type="AudioStream" uid="uid://72fn7uuhnm2r" path="res://sounds/bassguit_hit.wav" id="2_fc0e3"]
[ext_resource type="AudioStream" uid="uid://c65idtgxwnsjx" path="res://sounds/side_hit.wav" id="3_7jktm"]
[ext_resource type="AudioStream" uid="uid://bts0caqw8gya2" path="res://sounds/fx_earthquake.wav" id="4_ryrav"]
[ext_resource type="AudioStream" uid="uid://davaql5r7fqdb" path="res://sounds/winner_tune.wav" id="5_7jktm"]
[ext_resource type="AudioStream" uid="uid://cwcalj31kbbt" path="res://sounds/Fantasy_Game_Footstep_Stone_Light_H.wav" id="5_j5wjh"]
[ext_resource type="AudioStream" uid="uid://flg5oocxvtd2" path="res://sounds/Fantasy_Game_Footstep_Stone_Light_E.wav" id="6_vef74"]
[ext_resource type="AudioStream" uid="uid://jrtr44ico86c" path="res://sounds/Fantasy_Game_Footstep_Stone_Light_C.wav" id="7_hve3p"]

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_7jktm"]
bg_color = Color(0.24, 0.24, 0.24, 1)

[sub_resource type="Theme" id="Theme_j5wjh"]
default_font_size = 12

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_pause"]
bg_color = Color(0.1, 0.1, 0.1, 0.9)

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_feb5d"]
bg_color = Color(1, 1, 1, 1)

[node name="Game" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_80nbo")
grid_width = 20
grid_height = 16
mine_count = 66
end_overlay_win = Color(0, 0.513002, 1.92523e-07, 1)
end_overlay_die = Color(0.579254, 1.97336e-06, 3.85046e-07, 1)
cell_normal = Color(0.402675, 0.418932, 0.46802, 1)
cell_hover = Color(0.4225, 0.471792, 0.65, 1)

[node name="BG" type="Panel" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
theme_override_styles/panel = SubResource("StyleBoxFlat_7jktm")

[node name="VBoxContainer" type="VBoxContainer" parent="."]
layout_mode = 1
anchors_preset = 13
anchor_left = 0.5
anchor_right = 0.5
anchor_bottom = 1.0
offset_left = -29.0
offset_right = 29.0
grow_horizontal = 2
grow_vertical = 2

[node name="HBoxContainer" type="HBoxContainer" parent="VBoxContainer"]
layout_mode = 2
alignment = 1

[node name="StatsGrid" type="GridContainer" parent="VBoxContainer/HBoxContainer"]
layout_mode = 2
columns = 2

[node name="StageTitleLabel" type="Label" parent="VBoxContainer/HBoxContainer/StatsGrid"]
layout_mode = 2
text = "Stage:"
horizontal_alignment = 2

[node name="StageLabel" type="Label" parent="VBoxContainer/HBoxContainer/StatsGrid"]
unique_name_in_owner = true
layout_mode = 2
text = "1"

[node name="PointsTitleLabel" type="Label" parent="VBoxContainer/HBoxContainer/StatsGrid"]
layout_mode = 2
text = "Points:"
horizontal_alignment = 2

[node name="HBoxContainer" type="HBoxContainer" parent="VBoxContainer/HBoxContainer/StatsGrid"]
layout_mode = 2

[node name="PointsLabel" type="Label" parent="VBoxContainer/HBoxContainer/StatsGrid/HBoxContainer"]
unique_name_in_owner = true
layout_mode = 2

[node name="PointsBreakdownLabel" type="RichTextLabel" parent="VBoxContainer/HBoxContainer/StatsGrid/HBoxContainer"]
unique_name_in_owner = true
clip_contents = false
layout_mode = 2
theme = SubResource("Theme_j5wjh")
bbcode_enabled = true
scroll_active = false
autowrap_mode = 0
horizontal_alignment = 3
vertical_alignment = 3

[node name="MinesTitleLabel" type="Label" parent="VBoxContainer/HBoxContainer/StatsGrid"]
layout_mode = 2
text = "Mines:"
horizontal_alignment = 2

[node name="MineCounter" type="Label" parent="VBoxContainer/HBoxContainer/StatsGrid"]
unique_name_in_owner = true
layout_mode = 2
horizontal_alignment = 1
vertical_alignment = 1

[node name="PauseButton" type="Button" parent="VBoxContainer/HBoxContainer"]
unique_name_in_owner = true
layout_mode = 2
text = "Pause (ESC)"

[node name="MinefieldGrid" type="GridContainer" parent="VBoxContainer"]
unique_name_in_owner = true
layout_mode = 2
size_flags_vertical = 3
theme_override_constants/h_separation = 0
theme_override_constants/v_separation = 0

[node name="PauseOverlay" type="Control" parent="."]
unique_name_in_owner = true
visible = false
z_index = 10
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2

[node name="Panel" type="Panel" parent="PauseOverlay"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
theme_override_styles/panel = SubResource("StyleBoxFlat_pause")

[node name="VBoxContainer" type="VBoxContainer" parent="PauseOverlay"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
alignment = 1

[node name="PauseLabel" type="Label" parent="PauseOverlay/VBoxContainer"]
layout_mode = 2
theme_override_font_sizes/font_size = 48
text = "PAUSED"
horizontal_alignment = 1

[node name="HSeparator" type="HSeparator" parent="PauseOverlay/VBoxContainer"]
layout_mode = 2

[node name="HowToPlay" type="VBoxContainer" parent="PauseOverlay/VBoxContainer"]
layout_mode = 2
size_flags_horizontal = 4

[node name="HowToPlayLabel" type="Label" parent="PauseOverlay/VBoxContainer/HowToPlay"]
layout_mode = 2
theme_override_font_sizes/font_size = 24
text = "How to Play"
horizontal_alignment = 1

[node name="Instructions" type="Label" parent="PauseOverlay/VBoxContainer/HowToPlay"]
layout_mode = 2
theme_override_font_sizes/font_size = 16
text = "• Left Click: Reveal a cell
• Right Click: Place/remove flag
• Left Click on number: Chord (reveal all unflagged neighbors if flags = number)
• Right Click on number: Auto-flag remaining neighbors
• Avoid mines and clear all safe cells!
• Earn bonus points by playing quickly!"

[node name="HSeparator2" type="HSeparator" parent="PauseOverlay/VBoxContainer"]
layout_mode = 2

[node name="HighScoresLabel" type="Label" parent="PauseOverlay/VBoxContainer"]
layout_mode = 2
theme_override_font_sizes/font_size = 24
text = "High Scores"
horizontal_alignment = 1

[node name="HighScoresList" type="VBoxContainer" parent="PauseOverlay/VBoxContainer"]
unique_name_in_owner = true
layout_mode = 2
size_flags_horizontal = 4

[node name="Overlay" type="Control" parent="."]
unique_name_in_owner = true
visible = false
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2

[node name="OverlayBackgroundPanel" type="Panel" parent="Overlay"]
unique_name_in_owner = true
z_index = 1
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
size_flags_horizontal = 3
size_flags_vertical = 3
theme_override_styles/panel = SubResource("StyleBoxFlat_feb5d")

[node name="VBoxContainer" type="VBoxContainer" parent="Overlay"]
z_index = 2
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
alignment = 1

[node name="OverlayLabel" type="Label" parent="Overlay/VBoxContainer"]
unique_name_in_owner = true
layout_mode = 2
size_flags_vertical = 1
theme_override_font_sizes/font_size = 36
text = "Game Over"
horizontal_alignment = 1
vertical_alignment = 1

[node name="ScoreBreakdownContainer" type="VBoxContainer" parent="Overlay/VBoxContainer"]
unique_name_in_owner = true
visible = false
layout_mode = 2
size_flags_horizontal = 4

[node name="ScoreBreakdownLabel" type="Label" parent="Overlay/VBoxContainer/ScoreBreakdownContainer"]
layout_mode = 2
theme_override_font_sizes/font_size = 24
text = "Score Breakdown"
horizontal_alignment = 1

[node name="StageScoresContainer" type="VBoxContainer" parent="Overlay/VBoxContainer/ScoreBreakdownContainer"]
unique_name_in_owner = true
layout_mode = 2

[node name="HSeparator" type="HSeparator" parent="Overlay/VBoxContainer/ScoreBreakdownContainer"]
layout_mode = 2

[node name="FinalScoreLabel" type="Label" parent="Overlay/VBoxContainer/ScoreBreakdownContainer"]
unique_name_in_owner = true
layout_mode = 2
theme_override_font_sizes/font_size = 28
text = "Final Score: 0"
horizontal_alignment = 1

[node name="OverlayRestartButton" type="Button" parent="Overlay/VBoxContainer"]
unique_name_in_owner = true
layout_mode = 2
size_flags_horizontal = 4
text = "Play Again"

[node name="Sounds" type="Node" parent="."]

[node name="LockedSound" type="AudioStreamPlayer" parent="Sounds"]
stream = ExtResource("2_fc0e3")

[node name="ErrorSound" type="AudioStreamPlayer" parent="Sounds"]
stream = ExtResource("3_7jktm")

[node name="FxEarthquake" type="AudioStreamPlayer" parent="Sounds"]
stream = ExtResource("4_ryrav")

[node name="PlantFlag" type="AudioStreamPlayer" parent="Sounds"]
stream = ExtResource("5_j5wjh")

[node name="UnPlantFlag" type="AudioStreamPlayer" parent="Sounds"]
stream = ExtResource("6_vef74")

[node name="ClearTiles" type="AudioStreamPlayer" parent="Sounds"]
stream = ExtResource("7_hve3p")

[node name="WinnerTune" type="AudioStreamPlayer" parent="Sounds"]
stream = ExtResource("5_7jktm")
